interactive with tabs, loader and refactoring

--- a/src/components/App/App.module.scss
+++ b/src/components/App/App.module.scss
@@ -23,9 +23,10 @@ body {
     margin: 50px auto;
     display: grid;
     grid-template-columns: 300px auto;
-    grid-template-rows: 50px 252px auto;
+    grid-template-rows: 45px 5px 252px auto;
     grid-template-areas:
         "filter tabs"
+        "filter progress"
         "filter tickets"
         ". tickets";
 }
@@ -35,6 +36,14 @@ body {
     font-weight: 400;
     letter-spacing: 0.5px;
     text-transform: uppercase;
+}
+
+.progress {
+    grid-area: progress; 
+}
+
+.progress.hidden {
+    display: none;
 }
 
 .custom-radio-button {
@@ -60,10 +69,11 @@ body {
 @media (max-width: 890px) {
     .content {
         grid-template-columns: 1fr;
-        grid-template-rows: 180px 50px 1fr;
+        grid-template-rows: 180px 45px 5px 1fr;
         grid-template-areas:
             "filter"
             "tabs"
+            "progress"
             "tickets";
     }
 }
