--- a/src/components/TicketList/TicketList.module.scss
+++ b/src/components/TicketList/TicketList.module.scss
@@ -17,6 +17,7 @@ ul {
 
 .adding-btn {
     width: 513px;
+    grid-area: button;
 }
 
 .ticket {
@@ -58,7 +59,7 @@ ul {
 
 .transfer {
     text-align: start;
-    width: 100px;
+    width: 110px;
 }
 
 .table--info {
